--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,5 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+ 
+@import '/node_modules/@fortawesome/fontawesome-free/css/all.min.css';
